[gd_scene load_steps=29 format=3 uid="uid://b25vye5etxi5"]

[ext_resource type="Script" path="res://assets/enemies/swordsman/swordsman.gd" id="1_6tos1"]
[ext_resource type="Script" path="res://state_machine/state_machine.gd" id="2_8i2l2"]
[ext_resource type="Script" path="res://assets/enemies/swordsman/states/state_idle.gd" id="3_c8dnd"]
[ext_resource type="Script" path="res://assets/enemies/swordsman/states/state_chase.gd" id="4_75o1n"]
[ext_resource type="Script" path="res://assets/enemies/swordsman/states/state_fall.gd" id="5_fqqg6"]
[ext_resource type="Script" path="res://assets/enemies/swordsman/states/state_combat.gd" id="6_njad8"]
[ext_resource type="Shader" path="res://assets/effects/shaders/blinker.gdshader" id="7_e3isw"]
[ext_resource type="Texture2D" uid="uid://hgqfwqtlkqpn" path="res://nin_sprites.png" id="7_si21x"]
[ext_resource type="AudioStream" uid="uid://82jihjn8dema" path="res://assets/sounds/568169__merrick079__sword-sound-2.wav" id="9_vs37d"]
[ext_resource type="AudioStream" uid="uid://15g4sj5tgcno" path="res://assets/sounds/180837__32cheeseman32__swordswing01.wav" id="10_so4d5"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2wfxl"]
size = Vector2(5, 8)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_g3os3"]
shader = ExtResource("7_e3isw")
shader_parameter/blend = 0.0

[sub_resource type="AtlasTexture" id="AtlasTexture_ca42h"]
atlas = ExtResource("7_si21x")
region = Rect2(140, 70, 10, 10)

[sub_resource type="AtlasTexture" id="AtlasTexture_7si0g"]
atlas = ExtResource("7_si21x")
region = Rect2(130, 80, 10, 10)

[sub_resource type="AtlasTexture" id="AtlasTexture_uhgfw"]
atlas = ExtResource("7_si21x")
region = Rect2(140, 80, 10, 10)

[sub_resource type="AtlasTexture" id="AtlasTexture_8dojg"]
atlas = ExtResource("7_si21x")
region = Rect2(140, 70, 10, 10)

[sub_resource type="AtlasTexture" id="AtlasTexture_5es5m"]
atlas = ExtResource("7_si21x")
region = Rect2(150, 70, 10, 10)

[sub_resource type="SpriteFrames" id="SpriteFrames_4narl"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ca42h")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7si0g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uhgfw")
}],
"loop": false,
"name": &"hit",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8dojg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5es5m")
}],
"loop": true,
"name": &"move",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_v36c8"]
size = Vector2(100, 100)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_17m7r"]
size = Vector2(8, 10)

[sub_resource type="AtlasTexture" id="AtlasTexture_eat7w"]
atlas = ExtResource("7_si21x")
region = Rect2(130, 70, 10, 10)

[sub_resource type="AtlasTexture" id="AtlasTexture_h1pj8"]
atlas = ExtResource("7_si21x")
region = Rect2(150, 90, 10, 10)

[sub_resource type="AtlasTexture" id="AtlasTexture_3co06"]
atlas = ExtResource("7_si21x")
region = Rect2(150, 80, 10, 10)

[sub_resource type="SpriteFrames" id="SpriteFrames_b2g1y"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_eat7w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h1pj8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3co06")
}],
"loop": false,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_302u5"]
size = Vector2(8, 8)

[sub_resource type="Animation" id="Animation_82swx"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Weapon:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Weapon/WeaponHitbox:monitoring")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Weapon:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_w4vrw"]
resource_name = "hit"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Weapon:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.433333),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 1, 2]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Weapon/WeaponHitbox:monitoring")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.166667, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [false, true, false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Weapon:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_rstr4"]
_data = {
"RESET": SubResource("Animation_82swx"),
"hit": SubResource("Animation_w4vrw")
}

[node name="Swordsman" type="CharacterBody2D" node_paths=PackedStringArray("state_machine", "navigation_agent", "sprite")]
collision_mask = 3
script = ExtResource("1_6tos1")
state_machine = NodePath("StateMachine")
navigation_agent = NodePath("NavigationAgent2D")
sprite = NodePath("AnimatedSprite2D")
limit_nav_axis = Vector2i(1, 0)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_2wfxl")

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("initial_state")]
script = ExtResource("2_8i2l2")
initial_state = NodePath("Idle")

[node name="Idle" type="Node" parent="StateMachine"]
script = ExtResource("3_c8dnd")

[node name="Chase" type="Node" parent="StateMachine"]
script = ExtResource("4_75o1n")

[node name="Fall" type="Node" parent="StateMachine"]
script = ExtResource("5_fqqg6")

[node name="Combat" type="Node" parent="StateMachine"]
script = ExtResource("6_njad8")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
material = SubResource("ShaderMaterial_g3os3")
sprite_frames = SubResource("SpriteFrames_4narl")
animation = &"hit"

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]

[node name="DetectRange" type="Area2D" parent="."]
collision_mask = 9

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectRange"]
shape = SubResource("RectangleShape2D_v36c8")

[node name="Hitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
shape = SubResource("RectangleShape2D_17m7r")

[node name="Weapon" type="AnimatedSprite2D" parent="."]
visible = false
sprite_frames = SubResource("SpriteFrames_b2g1y")

[node name="WeaponHitbox" type="Area2D" parent="Weapon"]
monitoring = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Weapon/WeaponHitbox"]
shape = SubResource("RectangleShape2D_302u5")

[node name="ChaseTimer" type="Timer" parent="."]
wait_time = 4.0
one_shot = true

[node name="AttackTimer" type="Timer" parent="."]
process_callback = 0
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_rstr4")
}

[node name="SwordHit" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("9_vs37d")

[node name="SwordSwing" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("10_so4d5")
volume_db = 10.0

[connection signal="body_entered" from="DetectRange" to="." method="_on_detect_range_body_entered"]
[connection signal="body_exited" from="DetectRange" to="." method="_on_detect_range_body_exited"]
[connection signal="body_entered" from="Hitbox" to="." method="_on_area_2d_body_entered"]
[connection signal="body_entered" from="Weapon/WeaponHitbox" to="StateMachine/Combat" method="_on_weapon_hitbox_body_entered"]
